# index-tts2-ext

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  GITHUB_PREPARATION_SUMMARY.md  README.md  RELEASE_NOTES_v2.1.0.md  SECURITY.md  VERSION_SUMMARY.md  WINDOWS_DEPLOYMENT_GUIDE.md  docker-compose.yml  pyproject.toml  webui.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: enhanced_webui_config.yaml
docs/: API.md  DEPLOYMENT.md  ENHANCED_WEBUI_DEPLOYMENT.md  TROUBLESHOOTING.md
indextts/: __init__.py  infer_v2.py
indextts/audio_formats/: __init__.py  error_handling.py  format_converter.py  models.py
indextts/auto_save/: __init__.py  audio_buffer.py  audio_utils.py  config.py  config_validator.py  error_handler.py  example_usage.py  file_manager.py  notification_system.py  performance_monitor.py  save_manager.py  scheduler.py  webui_integration.py
indextts/chapter_parsing/: __init__.py  chapter_parser.py  models.py
indextts/config/: __init__.py  config_manager.py  enhanced_config.py  enhanced_config_manager.py  env_config.py  graceful_degradation.py
indextts/enhanced_webui/: __init__.py  background_tts.py  enhanced_ui_components.py  enhanced_webui.py  task_dashboard.py  ui_polish.py  ui_theme.py  ui_theme_manager.py  voice_selection_demo.py  webui_components.py
indextts/file_processing/: __init__.py  console_feedback.py  file_preview.py  file_processor.py  models.py  validation.py
indextts/github_preparation/: __init__.py  cleanup_duplicate_tests.py  conservative_test_organizer.py  demo_github_preparation.py  documentation_generator.py  documentation_generator_example.py  example_usage.py  file_classifier.py  github_preparation.py  github_preparation_example.py  gitignore_manager.py  gitignore_manager_example.py  metadata_manager.py  metadata_manager_example.py  organize_tests.py  restore_tests.py  safe_file_manager.py  test_organizer.py  validation_system.py  version_manager.py  version_manager_example.py
indextts/output_management/: __init__.py  models.py  output_manager.py
indextts/performance/: __init__.py  audio_optimizer.py  benchmarking.py  chapter_optimizer.py  inference_optimizer.py  memory_manager.py  (+1 more)
samples/: README.md
scripts/: deploy_enhanced_webui.py  setup_enhanced_webui.bat  setup_enhanced_webui.py  start_enhanced_webui.py  validate_config.py
tests/: demo_validation_system.py  run_validation_tests.py  test_audio_format_converter.py  test_audio_segmenter.py  test_auto_save_defaults_verification.py  test_complete_webui_mp3_flow.py  test_complete_workflow_integration.py  test_dark_theme_performance.py  test_documentation_generator.py  test_file_classifier.py  test_final_mp3_fix.py  test_fixed_task_manager.py  test_github_preparation.py  test_gitignore_manager.py  test_indentation_fix.py  test_large_file_performance.py  test_long_text_processing.py  test_metadata_manager.py  test_mp3_conversion.py  test_multiple_saves.py  test_output_manager.py  test_outputs_folder_mp3.py  test_performance_optimizations.py  test_safe_file_manager.py  test_segmented_file_organization.py  test_task_manager_format_conversion.py  test_ui_load_testing.py  test_ui_theme.py  test_uv_installation_validation.py  test_validation_system.py  test_version_manager.py  test_version_manager_integration.py  test_voice_selection_demo.py  test_webui_format_conversion.py
(+13 files in other folders)
