[project]
name = "indextts"
version = "2.1.0"
description = "IndexTTS2: A breakthrough text-to-speech system combining emotionally expressive speech synthesis with precise duration control in an autoregressive zero-shot architecture. Features include zero-shot voice cloning, independent emotion control through multiple modalities, multilingual support (Chinese/English), and high-quality 22kHz audio generation with BigVGAN vocoder."
license = "LicenseRef-Bilibili-IndexTTS"
license-files = [ "LICEN[CS]E*", "INDEX_MODEL_LICENSE*",]
readme = "README.md"
classifiers = [ "Development Status :: 5 - Production/Stable", "Intended Audience :: Science/Research", "Intended Audience :: Developers", "Intended Audience :: End Users/Desktop", "Topic :: Scientific/Engineering", "Topic :: Scientific/Engineering :: Artificial Intelligence", "Topic :: Multimedia :: Sound/Audio :: Speech", "Topic :: Software Development :: Libraries :: Python Modules", "Natural Language :: English", "Natural Language :: Chinese (Simplified)", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Operating System :: OS Independent", "License :: Other/Proprietary License",]
requires-python = ">=3.10"
dependencies = [ "accelerate==1.8.1", "beautifulsoup4>=4.12.0", "chardet>=5.2.0", "cn2an==0.5.22", "ebooklib>=0.18", "cython==3.0.7", "descript-audiotools==0.7.2", "einops>=0.8.1", "ffmpeg-python==0.2.0", "g2p-en==2.1.0", "jieba==0.42.1", "json5==0.10.0", "keras==2.9.0", "librosa==0.10.2.post1", "matplotlib==3.8.2", "modelscope==1.27.0", "munch==4.0.0", "numba==0.58.1", "numpy==1.26.2", "omegaconf==>=2.3.0", "opencv-python==4.9.0.80", "pandas==2.3.2", "safetensors==0.5.2", "sentencepiece==>=0.2.1", "tensorboard==2.9.1", "textstat>=0.7.10", "tokenizers==0.21.0", "torch==2.8.*", "torchaudio==2.8.*", "toml>=0.10.2", "tqdm>=4.67.1", "transformers==4.52.1", "wetext>=0.0.9; sys_platform != 'linux'", "WeTextProcessing; sys_platform == 'linux'", "send2trash>=1.8.3",]
[[project.authors]]
name = "Bilibili IndexTTS Team"

[build-system]
requires = [ "hatchling >= 1.27.0",]
build-backend = "hatchling.build"

[tool]
[[tool."uv.index"]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [ "pytest>=8.4.2", "pytest-cov>=4.0.0", "black>=23.0.0", "flake8>=6.0.0", "mypy>=1.0.0",]

[project.optional-dependencies]
webui = [ "gradio==5.44.1",]
deepspeed = [ "deepspeed==0.17.1",]

[project.urls]
Homepage = "https://github.com/IndexTeam/IndexTTS-2"
Repository = "https://github.com/IndexTeam/IndexTTS-2.git"
Documentation = "https://github.com/IndexTeam/IndexTTS-2/blob/main/README.md"
Issues = "https://github.com/IndexTeam/IndexTTS-2/issues"
Changelog = "https://github.com/IndexTeam/IndexTTS-2/releases"

[project.scripts]
indextts = "indextts.cli:main"
indextts-webui = "webui:main"

[tool.uv]
no-build-isolation-package = [ "deepspeed",]

[tool."uv.sources"]
[[tool."uv.sources".torch]]
index = "pytorch-cuda"
marker = "sys_platform == 'linux' or sys_platform == 'win32'"

[[tool."uv.sources".torchaudio]]
index = "pytorch-cuda"
marker = "sys_platform == 'linux' or sys_platform == 'win32'"

[[tool."uv.sources".torchvision]]
index = "pytorch-cuda"
marker = "sys_platform == 'linux' or sys_platform == 'win32'"

